feat: 添加liquibase迁移插入语句是租户字段能动态变化
${tenantName}  租户名
${db}  数据库名
${username}  数据库用户名
${schema} 模式名